flickering issue

--- a/public/stylesheets/paykido-api.css
+++ b/public/stylesheets/paykido-api.css
@@ -4404,6 +4404,9 @@ input[type="submit"].btn.btn-mini {
 .modal-header {
   padding: 9px 15px;
   border-bottom: 1px solid #eee;
+  -webkit-border-radius: 6px 6px 0 0;
+     -moz-border-radius: 6px 6px 0 0 ; 
+          border-radius: 6px 6px 0 0; 
 }
 
 .modal-header .close {
